app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 */

@import "bootstrap-sprockets";
@import "bootstrap";

@import "home.scss";
@import "positions.scss";
@import "fantasy_teams.scss";

.navbar .current-pick {
	font-size: 1.2em;
	margin-right: 20px;
}

body { padding-top: 54px; }

.sidebar {
	// text-align: center;
	background-color: #aaa;
	border-right: 1px solid #aaa;
	padding: 0;
}

.draft-order {
	margin-bottom: 0;

	.list-group-item {
		min-width: 200px;
		width: 100%;
		text-align: left;
		font-size: 1.2em;

		.pick-number {
			margin-right: 15px;
		}
	}

	.selected {
		// background-color: black;
		// color: #ccc;
	}

}

.navbar {
	margin-bottom: 0;
}

